# cevi-versand

./: .crash.txt.swp  .gitignore  Cargo.toml  README.md  crash.txt  inject_people.yaml  injectedPeople.yaml  mapping.yaml  people.json  release.sh  rustfmt.toml  usertoken.secret
.github/: FUNDING.yml
cli/: .Cargo.toml.swp  Cargo.toml  build.rs
cli/src/: .main.rs.swp  main.rs
combine/: .gitignore  Cargo.toml  config.yaml  mapping.yaml
combine/examples/: .main.rs.swp  main.rs
combine/src/: .injection.rs.swp  .lib.rs.swp  .main.rs.swp  .roletranslation.rs.swp  injection.rs  lib.rs  main.rs  roletranslation.rs
dbparse/: .Cargo.toml.swp  .config.yaml.swp  .gitignore  .text.yaml.swp  Cargo.toml  mapping.yaml  text.yaml
dbparse/examples/: run.rs  token.rs
dbparse/src/: .main.rs.swp  lib.rs  main.rs  mapping.rs
debugcli/: Cargo.toml  out.txt
debugcli/src/: .main.rs.swp  main.rs
deprecate_crash/: Cargo.toml
deprecate_crash/src/: main.rs
gui/: .Cargo.toml.swp  Cargo.toml  HowToConrod.md  options.txt
gui/conrod_example_shared/: Cargo.toml
gui/src/: .lib.rs.swp  lib.rs
gui/src/actual_gui/: .mod.rs.swp  mod.rs
gui/src/conrod_example_shared/: mod.rs
gui/src/support/: .mod.rs.swp  mod.rs
internetleek/: .Cargo.toml.swp  Cargo.toml
internetleek/src/: .lib.rs.swp  lib.rs
orbtkgui/: Cargo.toml
orbtkgui/src/: .lib.rs.swp  lib.rs  main.rs
orbtkgui/static/: index.html
orbtkrepo/examples/: .clear.rs.swp
pdfgen/: .Cargo.toml.swp  .gitignore  Cargo.toml
pdfgen/benches/: .my_benchmark.rs.swp  my_benchmark.rs
pdfgen/examples/: one.rs
pdfgen/src/: .images.rs.swp  .lib.rs.swp  .main.rs.swo  .main.rs.swp  .pluralizable.rs.swp  images.rs  lib.rs  main.rs  pluralizable.rs
ui/: .Cargo.toml.swp  Cargo.toml  icon.ai  icon.psd
ui/examples/: .token.rs.swp  token.rs
ui/src/: .lib.rs.swp  .main.rs.swp  lib.rs  main.rs
ui_/: icon.psd  social_preview.psd
webgui/: .Cargo.toml.swp  Cargo.toml  build.sh  issue.txt  out.txt  server.py.bak
webgui/server/: index.html  webgui.js  webgui.wasm
webgui/src/: .lib.rs.swp  lib.rs  main.rs
