[package]
name = "cli"
version = "0.1.0"
authors = ["Eric Mink <eric@mink.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap.git", rev = "fc359e3", features = ["color", "suggestions", "derive"] }
combine = { path = "../combine" }
ui = { path = "../ui" }
