[package]
name = "cli"
version = "1.0.0"
authors = ["Eric Mink <eric@mink.li>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap.git", rev = "f402f7a", features = ["color", "suggestions", "derive"] }
combine = { path = "../combine" }
ui = { path = "../ui" }
dbparse = { path = "../dbparse" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
LegalCopyright = "Eric Mink v/o Levanzo 2019"
ProductName = "cevi-versand"
FileDescription = "Generates Envelopes - see https://github.com/lucidBrot/cevi-versand/"
