[package]
name = "combine"
version = "0.1.0"
authors = ["Eric Mink <eric@mink.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdfgen = { path = "../pdfgen" }
dbparse = { path = "../dbparse" }
regex = "1.3.1"
ui = { path = "../ui" }
