[package]
name = "dbparse"
version = "0.1.0"
authors = ["eric <eric@mink.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.8"
#reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
#chttp = "0.5.5"
seed = "0.4.2"
serde-aux = "0.6"
