[package]
name = "gui"
version = "0.1.0"
authors = ["eric <eric@mink.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = { path = "../ui" }
conrod_core = "0.68"
conrod_example_shared = { path = "./conrod_example_shared" }
glium = "0.20"
conrod_glium = ""
