[package]
name = "internetleek"
version = "0.1.0"
authors = ["Eric Mink <eric@mink.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chttp = "0.5.5"
